--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ToDo</string>
+    <string name="ek_img_content">ExportKit Image</string>
+    <string name="enter_username_string">Enter username</string>
+    <string name="password_ek1_string">Password</string>
+    <string name="hello__string">Hello! </string>
+    <string name="title_ek1_string">Wellcome back you´ve \n been missed!</string>
+    <string name="sing_in_string">Sing In</string>
+    <string name="or_continue_with_string">Or continue with</string>
+    <string name="not_a_member__register_now_string">Not a member? Register Now</string>
+    <string name="recovery_password_string">Recovery Password</string>
 </resources>
