--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="or_continue_with_string">Or continue with</string>
     <string name="not_a_member__register_now_string">Not a member? Register Now</string>
     <string name="recovery_password_string">Recovery Password</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
